--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         @font-face {
             font-family: torus;
-            src: url(torus.woff2);
+            src: url(/torus.woff2);
         }
     </style>
 </head>
